<resources>
    <string name="app_name">BancoUTN</string>

    <string name="constPlazo">Para constituir tu plazo fijo necesitamos que nos proveas algunos datos.</string>
    <string name="banco_utn">Banco UTN</string>
    <string name="santafe">Provincia de Santa Fe</string>
    <string name="apellido">Apellido</string>
    <string name="ingresar_apellido">Ingrese su apellido</string>
    <string name="ingresar_nombre">Ingrese su nombre</string>
    <string name="nombre">Nombre</string>
    <string name="moneda">Moneda</string>
    <string name="simular">SIMULAR</string>
    <string name="constituir">CONSTITUIR</string>
    <string name="tasa_nominal_anual">Tasa Nominal Anual</string>
    <string name="ingrese_tna">Ingrese la TNA</string>
    <string name="tasa_efectiva_anual">Tasa Efectiva Anual</string>
    <string name="ingrese_tea">Ingrese la TEA</string>
    <string name="capital_a_invertir">Capital a Invertir ($)</string>
    <string name="ingrese_capital">Ingrese el capital a invertir</string>
    <string name="dias">Equivale a 30 días</string>
    <string name="renovacion">Con renovación automática</string>
    <string name="simulador_plazo">Simulador Plazo Fijo en Pesos</string>
    <string name="plazo">Plazo:</string>
    <string name="capital">Capital:</string>
    <string name="intereses_ganados">Intereses ganados:</string>
    <string name="monto_total">Monto total:</string>
    <string name="monto_total_anual">Monto total anual:</string>
    <string name="confirmar">CONFIRMAR</string>

    <!-- Nombres de fragmentos y activities -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simular_plazo">Simular plazo</string>
    <string name="const_plazo">Constituir plazo</string>
</resources>