<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layoutConstituirGeneral"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ConstituirPlazoFragment"
    >

    <!--Este es el linear layout principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/imagenTitulo"
            layout="@layout/imagen_titulo" />

        <TextView
            android:id="@+id/txtTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/constPlazo"
            android:textAppearance="?attr/textAppearanceBody2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresar_nombre"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresar_apellido"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtMoneda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moneda"
                android:textAppearance="?attr/textAppearanceBody1" />

            <Spinner
                android:id="@+id/spMoneda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinnerItems"/>

        </LinearLayout>

        <Button
            android:id="@+id/botonSimular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:enabled="false"
            android:layout_marginEnd="@dimen/normal_margin"
            android:text="@string/simular" />

        <TextView
            android:id="@+id/separator_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <Button
            android:id="@+id/botonConstituir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/constituir" />


    </LinearLayout>

</LinearLayout>
