<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SimularPlazoFragment"
    android:id="@+id/layoutSimularGeneral">

    <!--Este es el linear layout principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/imagen_titulo"
            android:id="@+id/imagenTitulo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTNA"
                android:text="@string/tasa_nominal_anual"
                android:textAppearance="?attr/textAppearanceBody2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTNA"
                android:inputType="numberDecimal"
                android:layout_marginStart="@dimen/normal_margin"
                android:hint="@string/ingrese_tna"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTEA"
                android:text="@string/tasa_efectiva_anual"
                android:textAppearance="?attr/textAppearanceBody2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTEA"
                android:inputType="numberDecimal"
                android:layout_marginStart="@dimen/normal_margin"
                android:hint="@string/ingrese_tea"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtCapital"
                android:text="@string/capital_a_invertir"
                android:textAppearance="?attr/textAppearanceBody2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editCapital"
                android:inputType="numberDecimal"
                android:layout_marginStart="@dimen/normal_margin"
                android:hint="@string/ingrese_capital"/>

        </LinearLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekDias"
            android:layout_marginTop="@dimen/normal_margin"
            android:max="12"
            android:progress="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtDiasSeek"
            android:text="@string/dias"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginStart="@dimen/long_margin"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="?attr/colorOnSecondary"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkRenovacion"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/renovacion"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtSimulador"
                android:text="@string/simulador_plazo"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/normal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:text="@string/plazo"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtDiasSimulador"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:textColor="?attr/colorOnSecondary"
                        android:layout_marginStart="@dimen/long_margin"
                        android:text="30 días"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/capitalTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:text="@string/capital"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtCapitalSimulador"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:textColor="?attr/colorOnSecondary"
                        android:text="$ 0"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/interesesTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:text="@string/intereses_ganados"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtInteresesGanados"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:textColor="?attr/colorOnSecondary"
                        android:text="$ 0"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/montoTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:text="@string/monto_total"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtMontoTotal"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:textColor="?attr/colorOnSecondary"
                        android:text="$ 0"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/montoAnualTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:text="@string/monto_total_anual"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtMontoTotalAnual"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:textColor="?attr/colorOnSecondary"
                        android:text="$ 0"/>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:id="@+id/botonConfirmar"
            android:enabled="false"
            android:text="@string/confirmar"/>


    </LinearLayout>






</LinearLayout>